# AD2Subnets

./: README.md  pyproject.toml
src/ad2subnets/: AD2Subnets.py  adidnsdump.py  call_other_script.py  parse_args.py  subnets_from_csv.py
